--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,50 @@
 services:
   db:
-    image: mysql:8
+    image: mariadb:10.5
     container_name: wordpress_db
     environment:
+      MYSQL_ROOT_PASSWORD: some_strong_root_password
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
-      MYSQL_RANDOM_ROOT_PASSWORD: '1'
+      MYSQL_PASSWORD: wordpress_password
     volumes:
       - db_data:/var/lib/mysql
     restart: always
-    networks:
-      - wordpress
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "--password=some_strong_root_password"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   wordpress:
     build:
       context: .
-      dockerfile: ./docker/wp.dockerfile
-    container_name: wordpress
+      dockerfile: ./docker/wp.dockerfile 
+    container_name: wordpress_fpm
     depends_on:
       - db
     environment:
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress_password
       WORDPRESS_DB_NAME: wordpress
+    volumes:
+      - wordpress_data:/var/www/html
     restart: always
-    networks:
-      - wordpress
 
   nginx:
     image: nginx:latest
     container_name: wordpress_nginx
     depends_on:
       - wordpress
+    volumes:
+      - wordpress_data:/var/www/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "8080:80"
-    volumes:
-      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     restart: always
-    networks:
-      - wordpress
-
-networks:
-  wordpress:
-    driver: bridge
 
 volumes:
   db_data:
-
+  wordpress_data:
